Fix weird rendering on iOS.

--- a/unshuffle/apps/ui/static/base.less
+++ b/unshuffle/apps/ui/static/base.less
@@ -60,6 +60,7 @@ h2 {
 }
 
 .card-spacing {
+  transform: translate3d(0,0,0); // prevent weird rendering issues in overscroll on ios
   vertical-align: top;
   display: inline-block;
   position: relative;
